--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,9 @@ jobs:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_BUCKET_NAME: 'stevepop-tf-backend'
-        run: terraform init
+          AWS_BUCKET_KEY_NAME: 'terraform.tfstate'
+          AWS_REGION: 'eu-west-2'
+        run: terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${AWS_BUCKET_KEY_NAME}" -backend-config="region=${AWS_REGION}"
       
       - name: Terraform Validate
         id: validate
